Fix fixed attachment on ios

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@supports (-webkit-overflow-scrolling: touch) {
+  .bg-fixed {
+    background-attachment: scroll;
+  }
+}
